# rust-k8s-demo

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml  flake.nix  kind-config.yaml  rust-k8s-demo.drawio  rustfmt.toml  skaffold.yaml
.dependabot/: config.yaml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  stale.yml
ci/: azure-build-stable.yml  azure-install-rust.yml  azure-rustfmt.yml
databaseservice/: Dockerfile  README.md
databaseservice/data/: data.sql
docs/: local-k8s.md  setup.md
fortune/: Cargo.toml
fortune/src/: main.rs
fortuneservice/: Cargo.toml  Dockerfile  README.md
fortuneservice/src/: main.rs
frontend/: Cargo.toml
frontend/proto/: fortune.proto
frontend/src/: grpc_client.rs  main.rs  views.rs
frontendservice/: Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
frontendservice/.dependabot/: config.yaml
frontendservice/src/: grpc_client.rs  main.rs
kubernetes-manifests/: databaseservice.yaml  fortuneservice.yaml  frontendservice.yaml  linkerd.yaml  metallb-config.yaml  quotationservice.yaml
manifests/: frontendservice.yaml  quotationservice.yaml
proto/: quotation.proto
quotationservice/: Cargo.toml  Dockerfile  README.md  build.rs
quotationservice/src/: main.rs
src/fortune/: Cargo.toml  build.rs
src/fortune/proto/: fortune.proto
src/fortune/src/: main.rs
src/frontend/: Cargo.toml  build.rs
src/frontend/src/: grpc_client.rs  main.rs
