[package]
name = "fortune-k8s-demo"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2018"

license = "MIT"

[[bin]]
name = "fortune-server"
path = "fortuneservice/src/main.rs"

[[bin]]
name = "frontend-server"
path = "frontendservice/src/main.rs"

[workspace]
members = [
  "fortuneservice",
  "frontendservice",
]

[patch.crates-io]
tower-service = { git = "https://github.com/tower-rs/tower" }
