[package]
name = "fortune-server"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2018"

license = "MIT"

[[bin]]
name = "fortune-server"
path = "src/main.rs"

[dependencies]
bytes = "0.4.12"
futures = "0.1.18"
http = "0.2"
log = "0.4"
pretty_env_logger = "0.3.1"
prost = "0.5.0"
tokio = "0.1.10"
tower = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }


[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
