[package]
name = "fortune-server"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2018"

license = "MIT"

[[bin]]
name = "fortune-server"
path = "src/main.rs"

[dependencies]
bytes = "0.4"
log = "0.4"
pretty_env_logger = "0.3.1"
prost = "0.5"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tonic = { git = "https://github.com/hyperium/tonic", features = ["tls"] }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
