[package]
name = "frontend"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1.18"
http = "0.1"
log = "0.4"
pretty_env_logger = "0.3.0"
prost = "0.5"
tokio = "0.1.10"
tower = { git = "https://github.com/tower-rs/tower" }
tower-add-origin = { git = "https://github.com/tower-rs/tower-http" }
tower-buffer = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-service = { git = "https://github.com/tower-rs/tower" }
tower-web = { git = "https://github.com/carllerche/tower-web", default-features = false }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
