[package]
name = "frontend-server"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2021"

[[bin]]
name = "frontend-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.5"
bytes = "1.10.1"
prost = "0.13.5"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.13.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "env-filter"]}
tracing-futures = "0.2.5"
tracing-attributes = "0.1.28"

[build-dependencies]
tonic-build = { version = "0.13.1" }
