[package]
name = "frontend-server"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2021"

[[bin]]
name = "frontend-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.6"
bytes = "1.10.1"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "env-filter"]}
tracing-futures = "0.2.5"
tracing-attributes = "0.1.28"

[build-dependencies]
tonic-prost-build = "0.14.2"
