[package]
name = "quotation-server"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2021"

license = "MIT"

[[bin]]
name = "quotation-server"
path = "src/main.rs"

[dependencies]
bytes = "1.11.0"
prost = "0.14.3"
prost-types = "0.14.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.16"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["default", "env-filter"]}
tracing-futures = "0.2.5"
tracing-attributes = "0.1.31"

[build-dependencies]
tonic-prost-build = "0.14.3"
