[package]
name = "fortune"
version = "0.1.0"
authors = ["Pradip Caulagi <caulagi@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-add-origin = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "0.2"
tower = { git = "https://github.com/tower-rs/tower" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
